refactor: Request DTO 안에서 엔티티 변환 로직 추가